tests/ui/extern/extern-main-fn.rs
extern "C" fn main() {} //~ ERROR: `main` function has wrong type [E0580]

// ferrocene-annotations: fls_qcb1n9c0e5hz
// Functions
//
// ferrocene-annotations: fls_usgd0xlijoxv
// ABI
//
// ferrocene-annotations: fls_8jb3sjqamdpu
// Program Entry Point
